<resources>
    <string name="search_hint">Search courses...</string>
    <string name="filter_text">По дате добавления ⇵</string>
    <string name="search_icon">Search_icon</string>
    <string name="course_title_default">Название курса</string>
    <string name="course_description_default">Описание курса</string>
    <string name="course_date_example">12.10.2025</string>
    <string name="course_price">от 10 000 ₽</string>
    <string name="course_details">Подробнее →</string>
</resources>